[workspace]

[package]
name = "YouTerm"
version = "0.1.0"
edition = "2021"

[dependencies]
chientrm-youtube-dl = { version = "0.9.0", features = ["downloader-rustls-tls", "reqwest", "tokio"] }
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
dirs-next = "2.0.0"
icy_sixel = "0.1.3"
image = "0.25.5"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }
url = { version = "2.5.4", features = ["serde"] }
